2002-09-05  Neal H. Walfield  <neal@g10code.de>

	* assuan-defs.h (_assuan_read_wrapper): Depreciated.
	* assuan-util.c (_assuan_read_wrapper): Removed.
	* assuan-defs.h (_assuan_write_wrapper): Depreciated.
	* assuan-util.c (_assuan_write_wrapper): Removed.
	* assuan.h (assuan_set_io_fun): Depreciated.
	* assuan-util.c (assuan_set_io_fun): Removed.

	* assuan-defs.h (_assuan_read): New function.
	(_assuan_write): Likewise.
	* assuan-io.c: New file.

	* assuan-buffer.c (writen): Use _assuan_write rather than doing
	the work here.
	(readline): Likewise for _assuan_read.

	* Makefile.am (libassuan_a_SOURCES): Add assuan-io.c.

2002-08-16  Werner Koch  <wk@gnupg.org>

	* assuan.h: Renamed Bad_Certificate_Path to Bad_Certificate_Chain.

2002-07-30  Werner Koch  <wk@gnupg.org>

	Changed the license from GPL to LGPL.

2002-07-23  Werner Koch  <wk@gnupg.org>

	* assuan-handler.c (_IO_cookie_io_functions_t): Define it here if
	it does not exists.

2002-06-27  Werner Koch  <wk@gnupg.org>

	* assuan-pipe-connect.c (assuan_pipe_connect): No special handling
	for the log_fd and stderr.  Connect stderr to /dev/null if it
	should not be retained.

2002-06-26  Werner Koch  <wk@gnupg.org>

	* assuan-buffer.c (assuan_write_line): Make sure we never
	accidently print an extra LF.

2002-05-23  Werner Koch  <wk@gnupg.org>

	* assuan-util.c (assuan_set_io_func): New.
	* assuan-buffer.c (writen, readline): Use the new functions
	instead of pth.
	* assuan-socket-server.c (accept_connection): Don't use the
	pth_accept - using the assuan included accept code would be a bad
	idea within Pth so we don't need a replacement function.

2002-05-22  Werner Koch  <wk@gnupg.org>

	* assuan-socket-server.c (assuan_init_connected_socket_server): New.
	(accept_connection): Factored most code out to..
	(accept_connection_bottom): .. new function.

2002-04-04  Werner Koch  <wk@gnupg.org>

	* assuan-buffer.c (my_log_prefix): New.  Use it for all i/o debug
	output.

2002-03-06  Werner Koch  <wk@gnupg.org>